--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:textColor">#000000</item>
+    <item name="android:datePickerDialogTheme">@style/DialogDatePicker.Theme</item>
+    <item name="android:timePickerDialogTheme">@style/DialogDatePicker.Theme</item>
+  </style>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:textColor">#000000</item>
-    </style>
-
+  <style name="DialogDatePicker.Theme" parent="Theme.AppCompat.Light.Dialog">
+    <item name="colorAccent">#7e57c2</item>
+  </style>
 </resources>
